--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "G:\\Anaconda3\\envs\\py3\\python.exe",
+    "python.pythonPath": "/Users/tay/anaconda3/envs/Web/bin/python",
     "python.linting.pylintEnabled": true
 }
